<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:visibility="gone"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tx_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:padding="3dp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/black"
            android:contentDescription="@string/screen" />

        <LinearLayout
            android:id="@+id/ln_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:backgroundTint="@color/colorPrimary"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home"
                android:src="@drawable/ic_baseline_home_24"
                app:backgroundTint="@color/colorPrimary"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btn_recents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/recent_apps"
                android:src="@drawable/ic_baseline_table_rows_24"
                app:backgroundTint="@color/colorPrimary"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btn_voldown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/volume_down"
                android:src="@drawable/ic_baseline_volume_down_24"
                app:backgroundTint="@color/colorAccent"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btn_volup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/volume_up"
                android:src="@drawable/ic_baseline_volume_up_24"
                app:backgroundTint="@color/colorAccent"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btn_lockscr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lock_screen"
                android:src="@drawable/ic_baseline_lock_24"
                app:backgroundTint="@color/colorAccent"
                app:tint="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
